Fix h3 wording and spacing issue

--- a/style.css
+++ b/style.css
@@ -26,16 +26,12 @@ h1 {
 
 /*Instruction paragraph*/
 
-.instructions p {
+#pleaseCall {
     text-align: center;
     color: rgb(255, 13, 134);
     font-family: 'Great Vibes', cursive;
     font-size: 200%;
-    margin: 0% auto;
-}
-
-#pleaseCall {
-    margin-top: 1.5%;
+    margin: 1.5% auto 0 auto;
 }
 
 /*Win & Tie messages*/
